--- a/app/editor/vibe/1.html
+++ b/app/editor/vibe/1.html
@@ -518,7 +518,7 @@ ${info.txt?info.txt:'(no text)'}
 HTML Preview:
 ${info.html}${info.html.length>=150?'...':''}
 
-What changes would you like?`;
+[REQUEST]`;
   
   input.value=text;
   input.focus();
