--- a/index.html
+++ b/index.html
@@ -756,8 +756,9 @@ body {
     
     <div class="token-card__status token-card__status--hidden" id="tokenStatus">
       <span class="material-icons">check_circle</span>
-      <span>Token aktif - Rate limit: 5000 request/jam</span>
-      <span>XXXXX_pat_11AKCUSSI00WaAV9kcksR7_4z1E6eSypeoz5De3hdhMSLTQT9LqRuoCoEUr2l54LbQJ6OWAPTKE4Zq1lLr</span>
+      <span>Token aktif - Rate limit: 5000 request/jam
+      XXXXX_pat_11AKCUSSI00WaAV9kcksR7_4z1E6eSypeoz5De3hdhMSLTQT9LqRuoCoEUr2l54LbQJ6OWAPTKE4Zq1lLr      
+      </span>
 
     </div>
     
