--- a/index.html
+++ b/index.html
@@ -756,10 +756,9 @@ body {
     
     <div class="token-card__status token-card__status--hidden" id="tokenStatus">
       <span class="material-icons">check_circle</span>
-      <span>XXXXX_pat_11AKCUSSI00WaAV9kcksR7_4z1E6eSypeoz5De3hdhMSLTQT9LqRuoCoEUr2l54LbQJ6OWAPTKE4Zq1lLr</span>
-
+      <span>Token memberikan rate limit 5000 request per jam dan akses ke private repositories.</span>
     </div>
-    
+    //XXXXXX_pat_11AKCUSSI00WaAV9kcksR7_4z1E6eSypeoz5De3hdhMSLTQT9LqRuoCoEUr2l54LbQJ6OWAPTKE4Zq1lLr
     <div class="token-card__actions">
       <button class="btn btn--primary" id="saveToken">
         <span class="material-icons">check_circle</span>
